fixed layout problem

--- a/src/App.css
+++ b/src/App.css
@@ -386,6 +386,18 @@ input {
     border-radius: 0.5rem;
 }
 
+.clear-btn {
+    background-color: var(--primary-color);
+    color: var(--light);
+    font-size: 0.8rem;
+    padding: 0.8rem 3rem;
+    border-radius: 1.5rem;
+
+}
+
+.clear-btn:hover {
+    background-color: #27311c;
+}
 
 .product img {
     width: 50%;
